# lotus

./: .gitignore  .history  .pre-commit-config.yaml  LICENSE  README.md  contacts.pickle  contacts.py  field.py  main.py  notes.py  pyproject.toml  requirements.txt  rich_table_printer.py  varification_email.py  varification_phone_number.py  verification_email.py  verification_phone_number.py
.github/workflows/: pylint.yml
lotus-bot/: main.py  verification_phone_number.py
lotus_bot/: contacts.py  field.py  main.py  notes.py  rich_table_printer.py  verification_email.py  verification_phone_number.py
